2005-08-15  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (fcommit): Remove.  This command has never been
	documented, tested, or maintained; it also doesn't avoid the use
	of temporary files (which was supposed to be its purpose).  Has it
	ever actually been used...?
	
2005-08-15  Nathaniel Smith  <njs@pobox.com>

	* lua.cc (hook_init_attributes): Do more logging; use begin()
	instead of starting iteration by hand.

2005-08-15  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* testsuite.at, tests/*.at: make testsuite less demanding:
	- QGREP() and QEGREP() provide a portable [e]grep -q
	- export FOO=bar -> FOO=bar; export FOO
	- tail -n $x -> TAIL($x) with appropriate macro

2005-08-15  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* m4/typeof.m4: new test, looks if compiler knows the typeof()
	extension
	* configure.ac: use it
	* sanity.hh: use the test, and boost's abstraction over
	__PRETTY_FUNCTION__ and similar pseudo-macros

2005-08-15  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* configure.ac (BOOST_FIX_VERSION): only apply that fix on gcc.

2005-08-14  Nathaniel Smith  <njs@pobox.com>

	* configure.ac (BOOST_VERSION_CHECK, BOOST_FIX_VERSION): Fix for
	cross-compilation.  (Thanks to John Bowler <jbowler@acm.org>.)

2005-08-14  Matthew Gregan  <kinetik@orcon.net.nz>

	* testsuite.at: Don't use agraph.
	* Makefile.am: Minor cleanups.

2005-08-13  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* botan/gzip.cpp, botan/mutex.cpp: c functions via c* headers need
	std:: prefix

2005-08-13  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* schema_migration.cc (lowercase): it's only used for processing sha1
	values whos size we know: make array size constant
	* transforms.cc (encode_hexenc, decode_hexenc): they have to work with
	all kinds of string sizes, so at least make them nicer by using
	boost::scoped_array

2005-08-13  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* revision.cc: make copy constructor of revision_set behave like