@@ -692,3 +692,4 @@ m4_include(tests/t_update_branch.at)
 m4_include(tests/t_commit_cancelled.at)
 m4_include(tests/t_merge_lca.at)
 m4_include(tests/t_commit_log_writeback.at)
+m4_include(tests/t_log_brief.at)
